name:                my-project
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/my-project#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Threads, MVars, MVarSharedState, Channels, DuplicatingChannels, Entrada, Jugador, ConcumonGo
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , stm >= 2.3
                     , containers
                     , network
  default-language:    Haskell2010

executable my-project-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-extensions:    RecordWildCards
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -XRecordWildCards
  build-depends:       base >= 4.3 && < 5
                     , my-project
                     , containers
                     , network
                     , stm >= 2.3
                     , process
                     , parsec
  default-language:    Haskell2010

test-suite my-project-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , my-project
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/my-project
